Fix Bug 440524 - Expiry settings not displayed properly from Akonadi config

FIXED-IN: 5.18.0
BUG: 440524

(loading was incorrect:
-        settings.mUnreadExpireUnits = attr->readExpireUnits();
-        settings.mReadExpireUnits = attr->unreadExpireUnits();
+        settings.mUnreadExpireUnits = attr->unreadExpireUnits();
+        settings.mReadExpireUnits = attr->readExpireUnits();
)